--- a/html/form.html
+++ b/html/form.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="css/style2.css">
+    <link rel="stylesheet" href="../css/style2.css">
     <title>Entrar</title>
 
      <!-- Fontes do google Fonts -->
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header class="container-header">
-        <a href="index.html"><img class="logo" src="images/logo.png" alt="Logo do site"></a>
+        <a href="../index.html"><img class="logo" src="../images/logo.png" alt="Logo do site"></a>
         <div class="buttons-header">
 
         </div>
