--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="text-main1">
                     <div>
                     <h1 class="roboto-bold" style= "font-size: 3rem;">Pixsterest</h1>
-                    <p class="roboto-regular" style="color: #a89793; font-size: 1.5rem;">O Pixsterest é um site que aprecia o estilo da pixelart. Aprenda com nossos tutoriais, compartilhe seus trabalhos e acima de tudo, ajude a espalhar este estilo. <a href="/html/form.html">Comece Agora.</a></p>
+                    <p class="roboto-regular" style="color: #a89793; font-size: 1.5rem;">O Pixsterest é um site que aprecia o estilo da pixelart. Aprenda com nossos tutoriais, compartilhe seus trabalhos e acima de tudo, ajude a espalhar este estilo. <a href="html/form.html">Comece Agora.</a></p>
                     </div>
                     <figure>
                         <img src="images/mountain.png" alt="uma montanha" class="mountain">
