--- a/html/galllery.html
+++ b/html/galllery.html
@@ -44,7 +44,7 @@
             </figure>
 
             <figure>
-                <img src="../images/atticus icon.png" alt="">
+                <img src="../images/atticus_icon.png" alt="">
                 <figcaption>@Doggo_Pixel</figcaption>
             </figure>
             
@@ -59,7 +59,7 @@
             </figure>
 
             <figure>
-                <img src="../images/mob art.png" alt="">
+                <img src="../images/mob_art.png" alt="">
                 <figcaption>@ジョンソ</figcaption>
             </figure>
 
@@ -69,7 +69,7 @@
             </figure>
 
             <figure>
-                <img src="../images/shovel knight.png" alt="">
+                <img src="../images/shovel_knight.png" alt="">
                 <figcaption>@The_Pixel</figcaption>
             </figure>
 
@@ -79,7 +79,7 @@
             </figure>
 
             <figure>
-                <img src="../images/Girl finished.png" alt="">
+                <img src="../images/Girl_finished.png" alt="">
                 <figcaption>@Allan Roy</figcaption>
             </figure>
 
@@ -94,7 +94,7 @@
             </figure>
 
             <figure>
-                <img src="../images/Hollow knight.png" alt="">
+                <img src="../images/Hollow_knight.png" alt="">
                 <figcaption>@Pixel?</figcaption>
             </figure>
         </div>
